overflow sroll fixed

--- a/src/components/Calendar/Calendar.css
+++ b/src/components/Calendar/Calendar.css
@@ -8,6 +8,12 @@
   box-shadow: var(--shadow);
   background: var(--color-light-bg);
   transition: background 0.3s ease, color 0.3s ease;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
+.calendar::-webkit-scrollbar {
+  display: none;
 }
 
 body.dark .calendar {
